--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,15 +23,16 @@ jobs:
 
       - name: Get previous release
         id: get_last_release
-        uses: andstor/release-tag-action@v1.13.1
+        uses: marvinpinto/action-automatic-releases@latest
         with:
-          format: "{{range .}}{{.Name}}{{end}}"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          command: latest
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          include-assets: false
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
 
       - name: Create new release
         uses: actions/create-release@v1
-        if: ${{ steps.check_version.outputs.version != steps.get_last_release.outputs.result }}
+        if: ${{ steps.check_version.outputs.version != steps.get_last_release.outputs.tag_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
