--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,44 +1,32 @@
-name: Release
+name: Create Release
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - '*'
+
+env:
+  RELEASE_BINARY_NAME: myapp
 
 jobs:
-  release:
+  build-and-release:
+    name: Build and Release Rust Binary
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Setup Rust environment
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+      - name: Build Rust Binary
+        run: cargo build --release
 
-      - name: Check version in Cargo.toml
-        id: check_version
-        run: echo ::set-output name=version::$(grep version Cargo.toml | head -1 | cut -d '"' -f2)
-
-      - name: Get previous release
-        id: get_last_release
-        uses: marvinpinto/action-automatic-releases@latest
-        with:
-          automatic_release_tag: latest
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          include_assets: false
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-
-      - name: Create new release
+      - name: Create GitHub Release
         uses: actions/create-release@v1
-        if: ${{ steps.check_version.outputs.version != steps.get_last_release.outputs.tag_name }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ steps.check_version.outputs.version }}
-          release_name: Release ${{ steps.check_version.outputs.version }}
-          body: Release ${{ steps.check_version.outputs.version }}
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Release ${{ github.ref }}
           draft: false
           prerelease: false
-
+          files: |
+            ./target/release/${{ env.RELEASE_BINARY_NAME }}
