--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,11 +2,12 @@ name: Create Release
 
 on:
   push:
-    tags:
-      - '*'
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 env:
-  RELEASE_BINARY_NAME: myapp
+  RELEASE_BINARY_NAME: kill_port
 
 jobs:
   build-and-release:
