--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,19 @@
-name: "pre-release"
+name: "release"
 
 on:
   push:
-    branches:
-      - "master"
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build_and_release:
-    name: "Build and release"
+  
     runs-on: "ubuntu-latest"
 
     steps:
+      - uses: actions/checkout@v3
+      
       - name: "Build & test"
         run: cargo build --verbose --release
       
