--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,18 +5,18 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    
+env:
+  CARGO_TERM_COLOR: always
 
 jobs:
   build_and_release:
   
     runs-on: "ubuntu-latest"
 
-    steps:
-      - uses: actions/checkout@v3
-      
+    steps:      
       - name: "Build & test"
         run: cargo build --verbose --release
-      
       - name: Release
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
