--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,29 +1,21 @@
-name: "release"
-
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-    
-env:
-  CARGO_TERM_COLOR: always
+  release:
+    types: [created]
 
 jobs:
-  build_and_release:
-  
-    runs-on: "ubuntu-latest"
-
-    steps:      
-      - name: "Build & test"
-        run: cargo build --verbose --release
-      - name: Release
-      - uses: "marvinpinto/action-automatic-releases@latest"
+  release:
+    name: release ${{ matrix.target }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        target: [x86_64-unknown-linux-gnu]
+    steps:
+      - uses: actions/checkout@master
+      - name: Compile and release
+        uses: rust-build/rust-build.action@v1.4.3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: false
-          draft: false
-          title: "Production Build"
-          files: |
-            ./target/release/kill_port
+          RUSTTARGET: ${{ matrix.target }}
+          EXTRA_FILES: "README.md LICENSE"
